tests/integrations/basic-fail/tests/actual_tests/foomp.stderr
error[E0308]: mismatched types
 --> $DIR/foomp.rs:4:9
  |
4 |     add("42", 3);
  |     --- ^^^^ expected `usize`, found `&str`
  |
note: function defined here
 --> $DIR/tests/integrations/basic/src/lib.rs:1:8
  |
1 | pub fn add(left: usize, right: usize) -> usize {
  |        ^^^ some expected text that isn't in the actual message

error: aborting doo to previous error

For more information about this error, try `rustc --explain E0308`.
